Fixed overlapping animated svg elements

--- a/sass/partials/_animated-icons.scss
+++ b/sass/partials/_animated-icons.scss
@@ -14,7 +14,7 @@
   svg {
     width: 21%; 
     max-width: 100px;
-    padding:1px;
+    // padding:1px;
     height: 100%; 
     max-height: 100px;
     display: block; 
