--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2270,7 +2270,6 @@ Stylesheet: Helpers
 .c3xgm-about-icon-holder svg {
   width: 21%;
   max-width: 100px;
-  padding: 1px;
   height: 100%;
   max-height: 100px;
   display: block;
